# django-restolp

./: README.md  requirements.txt  setup.cfg  setup.py  urls.py  versiyon.py
django-restolp/: urls.py
django-restolp/modelpermission/: serializer.py  tests.py  urls.py  views.py
django-restolp/objectpermission/: urls.py
djangorestolp/: __init__.py  apps.py  permissions.py  settings.py  urls.py  viewsets.py
djangorestolp/grouphandler/: __init__.py  apps.py  serializer.py  urls.py  utils.py  views.py
djangorestolp/modelpermission/: __init__.py  apps.py  urls.py  utils.py  views.py
djangorestolp/objectpermission/: __init__.py  apps.py  urls.py  utils.py  views.py
example/: test.json
modelpermission/: apps.py  utils.py
objectpermission/: apps.py  serializer.py  utils.py
