[metadata]
name = "django-restolp"
version = 0.1.0
author = "Ali Yıldırım"
author_email = "ylrmali1289@gmail.com"
description = "Django object-level permissions for Django REST Framework"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url='https://github.com/ylrmali/django-restolp.git',
keywords = django, rest, rest-framework, permissions, object-level-permissions
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
install_requires =
    djangorestframework
    django-guardian>=2.4.0


[options.package_data]
* = *.md
